@startuml

class Account {
  +Long id
  +String name
  +String email
}

class Device {
  +Long id
  +String name
  +String description
  +String serialNumber
  +String deviceType
  +Long accountId
}

class DeviceAction {
  +Long id
  +Long deviceId
  +String type
  +String value
}

Account "1" -- "0..*" Device : has
Device "1" -- "1..*" DeviceAction : has
@enduml